--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="test_color">#66ff0000</color>
+    <color name="test_color_1">#6600ff00</color>
+    <color name="test_color_2">#660000ff</color>
+
 </resources>
