--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,15 @@
     <color name="test_color_1">#6600ff00</color>
     <color name="test_color_2">#660000ff</color>
 
+    <color name="c_feae1b">#feae1b</color>
+    <color name="c_653fac">#653fac</color>
+
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="red">#ff0000</color>
+    <color name="green">#00ff00</color>
+    <color name="blue">#0000ff</color>
+
+    <color name="background">#f1f1f1</color>
+
 </resources>
